# binchecker

./: README.md  io.github.BinChecker.json  meson.build  org.gnome.BinChecker.json
data/: io.github.BinChecker.desktop.in  io.github.BinChecker.gschema.xml  io.github.BinChecker.metainfo.xml.in  io.github.BinChecker.service.in  meson.build  org.gnome.BinChecker.desktop.in  org.gnome.BinChecker.gschema.xml  org.gnome.BinChecker.metainfo.xml.in  org.gnome.BinChecker.service.in
data/icons/: meson.build
po/: POTFILES.in  binchecker.pot  meson.build  ru.po
src/: binchecker-application.c  binchecker-application.h  binchecker-dialog.ui  binchecker-diff-dialog.c  binchecker-diff-dialog.h  binchecker-window.c  binchecker-window.h  binchecker-window.ui  binchecker.gresource.xml  libbindiff.c  libbindiff.h  main.c  meson.build
